<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battery_state_broadcaster</name>
  <version>0.0.0</version>
  <description>ros2 control battery state broadcaster controller</description>
  <maintainer email="yara.shahin@b-robotized.com">Yara Shahin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
